--- a/src/main/resources/fxml/IngredientList.fxml
+++ b/src/main/resources/fxml/IngredientList.fxml
@@ -39,6 +39,7 @@
                 <TableColumn fx:id="nameColumn" text="%cz.afrosoft.whattoeat.ingredients.table.header.name"/>
                 <TableColumn fx:id="unitColumn" text="%cz.afrosoft.whattoeat.ingredients.table.header.unit"/>
                 <TableColumn fx:id="priceColumn" text="%cz.afrosoft.whattoeat.ingredients.table.header.price"/>
+                <TableColumn fx:id="nutritionFactsColumn"/>
                 <TableColumn fx:id="keywordColumn" text="%cz.afrosoft.whattoeat.ingredients.table.header.keywords"/>
             </columns>
         </TableView>
