Diet copy dialog now allows to shift copied diet to specified date.

--- a/src/main/resources/fxml/DayDietDialog.fxml
+++ b/src/main/resources/fxml/DayDietDialog.fxml
@@ -62,6 +62,7 @@
                     <HBox styleClass="filter-bar"
                           GridPane.columnIndex="4"
                           GridPane.rowIndex="0"
+                          alignment="CENTER_LEFT"
                     >
                         <FieldLabel text="%cz.afrosoft.whattoeat.common.name" minWidth="40" HBox.hgrow="NEVER"/>
                         <TextField fx:id="nameFilter" HBox.hgrow="SOMETIMES"/>
