Added diet quick create button.

--- a/src/main/resources/fxml/DietList.fxml
+++ b/src/main/resources/fxml/DietList.fxml
@@ -23,6 +23,7 @@
             <DeleteButton fx:id="deleteButton" onAction="#deleteDiet"/>
             <IconButton fx:id="copyButton" icon="COPY" onAction="#showCopyDialog"/>
             <IconButton fx:id="shoppingListButton" icon="FILE_TEXT_ALT" onAction="#exportShoppingList"/>
+            <IconButton fx:id="quickCreateButton" icon="FAST_FORWARD" onAction="#quickCreate"/>
         </VBox>
     </left>
     <center>
