--- a/src/main/resources/fxml/DietGenerator.fxml
+++ b/src/main/resources/fxml/DietGenerator.fxml
@@ -1,15 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import cz.afrosoft.whattoeat.core.gui.component.FieldLabel?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.HBox?>
-<?import cz.afrosoft.whattoeat.core.gui.component.MultiSelect?>
+<?import cz.afrosoft.whattoeat.core.gui.component.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <GridPane xmlns:fx="http://javafx.com/fxml/1"
           xmlns="http://javafx.com/javafx/8.0.121"
           fx:controller="cz.afrosoft.whattoeat.diet.list.gui.controller.DietGeneratorController">
@@ -68,6 +61,7 @@
             fx:id="generatorField"
             GridPane.columnIndex="9"
             GridPane.rowIndex="0"
+            GridPane.hgrow="ALWAYS"
     />
     <FieldLabel
             GridPane.columnIndex="0"
@@ -82,6 +76,7 @@
             fx:id="cookbookFilter"
             GridPane.columnIndex="1"
             GridPane.rowIndex="2"
+            GridPane.hgrow="ALWAYS"
     />
     <FieldLabel
             text="%cz.afrosoft.whattoeat.diet.generator.input.dishes"
@@ -93,6 +88,8 @@
             fx:id="dishesFilter"
             GridPane.columnIndex="5"
             GridPane.rowIndex="2"
+            GridPane.columnSpan="5"
+            GridPane.hgrow="ALWAYS"
     />
 
     <FieldLabel
@@ -105,12 +102,14 @@
             fx:id="descriptionField"
             GridPane.columnIndex="0"
             GridPane.rowIndex="4"
-            GridPane.columnSpan="8"
+            GridPane.columnSpan="10"
+            GridPane.hgrow="ALWAYS"
     />
-    <Pane fx:id="generatorGuiPane"
+    <ScrollPane fx:id="generatorGuiPane"
           GridPane.columnIndex="0"
           GridPane.rowIndex="5"
-          GridPane.columnSpan="8"
+          GridPane.columnSpan="10"
+          GridPane.hgrow="ALWAYS"
     />
     <Button
             fx:id="generateButton"
